Bug on iphone display

--- a/src/cecile.css
+++ b/src/cecile.css
@@ -216,7 +216,7 @@ footer p {
 
   #yuki{
     height: fit-content;
-    width: fit-content;
+    width: auto;
   }
 }
 
